--- a/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
+++ b/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/includeTabs.vm
@@ -29,8 +29,9 @@
 							<a href="$switchRoleUrl"  id="roleSwitchAnchor"><span>${rloader.rs_exitRoleSwap} $roleUrlValue ${rloader.rs_view}</span></a>
 						#else
 							#if ($roleswapdropdown)
+								<label for ="roleSwitchSelect">${rloader.rs_viewSiteAs}</label>
 								<select id="roleSwitchSelect" onchange="if (this.options[this.selectedIndex].value != '') { parent.location = this.options[this.selectedIndex].value; } else { this.selectedIndex = 0; }">       
-								<option value="" selected="selected">${rloader.rs_viewSiteAs}</option>   
+								<option value="" selected="selected">${rloader.rs_selectRole}</option>   
 								#foreach( $role in $siteRoles)   
 									<option value="$switchRoleUrl$role$panelString">$role</option>       
 								#end     
@@ -70,7 +71,6 @@
 			#end
 
 </ul>
-
 <span class="drop" tabindex="-1"></span>
 </span>
 </span>
