--- a/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/site.vm
+++ b/custom_builds/3/portal/portal-10.x_custom/portal-render-engine-impl/pack/src/webapp/vm/neoskin/site.vm
@@ -59,12 +59,23 @@
 
 			<div id="siteNavWrapper" class="${logoSiteClass}">
 				<div id="mastHead" role="banner">
-					<div id="mastLogo">
-						<img title="Logo" alt="Logo" src="${logoSkinRepo}/${logoSkin}/images/logo_inst.gif" />
-					</div>
-					<div id="mastBanner">
-						<img title="Banner" alt="Banner" src="${logoSkinRepo}/${logoSkin}/images/banner_inst.gif" />
-					</div>
+<div id="mastLogo"> <a href="http://www.gordonconwell.edu/" target="_blank"><img width="290" height="125" alt="Gordon-Conwell Theological Seminary" src="${logoSkinRepo}/${logoSkin}/images/logo2.png"></a>
+<ul id="locations">
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/hamilton/">Hamilton</a></li>
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/boston/">Boston</a></li>
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/charlotte/">Charlotte</a></li>
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/jacksonville/">Jacksonville</a></li>
+</ul>
+<ul id="utilityNav">
+        <li class="ul1"><a target="_blank" title="Webmail" href="http://mail.gcts.edu">Webmail</a></li>
+        <li class="ul2"> <a href="http://www.gordonconwell.edu/contact.cfm" title="Contact Us" target="_blank">Contact</a></li>
+        <li class="ul3"> <a target="_blank" href="https://cams-web.gordonconwell.edu/estudent" title="CAMS Student Portal">Student Portal</a></li>
+        <li class="ul5"> <a target="_blank" href="http://www.gordonconwell.edu/resources/Helpdesk.cfm" title="Helpdesk">Helpdesk</a></li>
+        <li class="ul6"> <a target="_blank" href="http://www.gordonconwell.edu/resources/Quick-Links2.cfm" title="Quick Links">Quicklinks</a></li>
+</ul>
+
+</div>
+
 				</div>
 #parse("/vm/neoskin/includeTabs.vm")
 	  </div>
@@ -91,12 +102,24 @@
 			
 			<div id="siteNavWrapper" class="${logoSiteClass}">
 				<div id="mastHead" role="banner">
-					<div id="mastLogo">
-						<img title="Logo" alt="Logo" src="${logoSkinRepo}/${logoSkin}/images/logo_inst.gif" />
-					</div>
-					<div id="mastBanner">
-						<img title="Banner" alt="Banner" src="${logoSkinRepo}/${logoSkin}/images/banner_inst.gif" />
-					</div>
+
+<!-- GCTS CUSTOM -->
+<div id="mastLogo"> <a href="http://www.gordonconwell.edu/" target="_blank"><img width="290" height="125" alt="Gordon-Conwell Theological Seminary" src="${logoSkinRepo}/${logoSkin}/images/logo2.png"></a>
+<ul id="locations">
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/hamilton/">Hamilton</a></li>
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/boston/">Boston</a></li>
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/charlotte/">Charlotte</a></li>
+        <li> <a target="_blank" href="http://www.gordonconwell.edu/jacksonville/">Jacksonville</a></li>
+</ul>
+</div>
+<ul id="utilityNav">
+        <li class="ul1"><a target="_blank" title="Webmail" href="http://mail.gcts.edu">Webmail</a></li>
+        <li class="ul2"> <a href="http://www.gordonconwell.edu/contact.cfm" title="Contact Us" target="_blank">Contact</a></li>
+        <li class="ul3"> <a target="_blank" href="https://cams-web.gordonconwell.edu/estudent" title="CAMS Student Portal">Student Portal</a></li>
+        <li class="ul5"> <a target="_blank" href="http://www.gordonconwell.edu/resources/Helpdesk.cfm" title="Helpdesk">Helpdesk</a></li>
+        <li class="ul6"> <a target="_blank" href="http://www.gordonconwell.edu/resources/Quick-Links2.cfm" title="Quick Links">Quicklinks</a></li>
+</ul>
+
 					<!-- login component -->
 					<div id="mastLogin">
 					#if (!${loginTopLogin})
