--- a/site-manage/site-manage-10.x_features-backport/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-importSelection.vm
+++ b/site-manage/site-manage-10.x_features-backport/site-manage-tool/tool/src/webapp/vm/sitesetup/chef_site-siteInfo-importSelection.vm
@@ -15,6 +15,8 @@
 				$tlang.getString("sitinfimp.selection")
 			</p>
 			<br>
+
+            #if ($!importdataReplace)
 			<div class="indnt2">
 				<a href="#toolLink("SiteAction" "doMenu_siteInfo_importMigrate")" title ="$tlang.getString('sitinfimp.migrate')">
 					$tlang.getString("sitinfimp.migrate")
@@ -24,6 +26,8 @@
 				$tlang.getString("sitinfimp.migrate.info")
 			</p>
 			<p></p>
+            #end
+            #if ($!importdataMerge)
 			<div class="indnt2">
 				<a href="#toolLink("SiteAction" "doMenu_siteInfo_import")" title ="$tlang.getString('sitinfimp.import')">
 					$tlang.getString("sitinfimp.import")
@@ -33,6 +37,8 @@
 				$tlang.getString("sitinfimp.import.info")
 			</p>
 			<p></p>
+            #end
+            #if ($!importdataUser)
 			<div class="indnt2">
 				<a href="#toolLink("SiteAction" "doMenu_siteInfo_import_user")" title ="$tlang.getString('sitinfimp.import.user')">
 					$tlang.getString("sitinfimp.import.user")
@@ -41,6 +47,7 @@
 			<p class="instruction indnt2">
 				$tlang.getString("sitinfimp.import.user.info")
 			</p>
+            #end
 		#else
 			## show "no site available warning"
 			<p class="instruction">
